# dynamic_cv-assistive-control

./: .gitignore  CMakeLists.txt  camera_tool.py
docs/: boostPython-guide.md  cmake-guide.md  commands.md  nuc-setup.md
research/: ComputerVision_WheelChair_articles.odt
src/: Camera.hpp  CollsionDetector.cpp  CollsionDetector.hpp  ObjectDetector.cpp  ObjectDetector.hpp  RgbCamera.cpp  RgbCamera.hpp  RsCamera.cpp  RsCamera.hpp  TextureBuffer.hpp  arucoMarkerTracker.cpp  arucoMarkerTracker.hpp  arucoTracker.cxx  collision_ext.cpp  common.hpp  main.cpp  test1.cpp
